; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_ary_flatmap.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_ary_flatmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"Av\00", align 1
@STRM_NG = common dso_local global i64 0, align 8
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @ary_flatmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ary_flatmap(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @strm_get_args(i32* %14, i32 %15, i32* %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %10, i32* %11)
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @flatmap_len(i32 %18)
  %20 = call i32 @strm_ary_new(i32* null, i32 %19)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = call i32* @strm_ary_ptr(i32 %21)
  store i32* %22, i32** %13, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %11, align 4
  %26 = call i64 @flatmap_push(i32* %23, i32 %24, i32 %25, i32** %13)
  %27 = load i64, i64* @STRM_NG, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %4
  %30 = load i64, i64* @STRM_NG, align 8
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %5, align 4
  br label %37

32:                                               ; preds = %4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @strm_ary_value(i32 %33)
  %35 = load i32*, i32** %9, align 8
  store i32 %34, i32* %35, align 4
  %36 = load i32, i32* @STRM_OK, align 4
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %32, %29
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*, i32*) #1

declare dso_local i32 @strm_ary_new(i32*, i32) #1

declare dso_local i32 @flatmap_len(i32) #1

declare dso_local i32* @strm_ary_ptr(i32) #1

declare dso_local i64 @flatmap_push(i32*, i32, i32, i32**) #1

declare dso_local i32 @strm_ary_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
